--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <style>
 
         body{
-            background-color: rgba(90, 97, 145, 0.587);
+            background-color: red;
         }
         .container{
             display: flex;
@@ -748,5 +748,6 @@
     </script>
 </body>
 </html>
+
 
 
