--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
     <style>
 
         body{
-            background-color: red;
+             background-image: url("assets/bg.jpg");
+             background-repeat: no-repeat;
+             background-position: center center;
+             background-size: cover;       /* very important */
+             background-attachment: fixed; /* desktop */
+             min-height: 100vh;
         }
         .container{
             display: flex;
@@ -748,6 +753,7 @@
     </script>
 </body>
 </html>
+
 
 
 
