--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <style>
 
         body{
-             background-image: url("assets/bg.jpg");
+             background-image: url("bg.jpg");
              background-repeat: no-repeat;
              background-position: center center;
              background-size: cover;       /* very important */
@@ -753,6 +753,7 @@
     </script>
 </body>
 </html>
+
 
 
 
