--- a/index.html
+++ b/index.html
@@ -17,12 +17,7 @@
     <style>
 
         body{
-             background-image: url("bg.jpg");
-             background-repeat: no-repeat;
-             background-position: center center;
-             background-size: cover;       /* very important */
-             background-attachment: fixed; /* desktop */
-             min-height: 100vh;
+             background: red;
         }
         .container{
             display: flex;
@@ -753,6 +748,7 @@
     </script>
 </body>
 </html>
+
 
 
 
