--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <style>
 
         body{
-             background: red;
+             background-image: url("./bg.jpg");
+
         }
         .container{
             display: flex;
@@ -748,6 +749,7 @@
     </script>
 </body>
 </html>
+
 
 
 
