--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 
         body{
              background-image: url("./bg.jpg");
+             background-repeat: no-repeat;
+             background-position: center center;
+             background-size: cover;
 
         }
         .container{
@@ -749,6 +752,7 @@
     </script>
 </body>
 </html>
+
 
 
 
