--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
 
         body{
              background-image: url("./bg.jpg");
+            
+
              background-repeat: no-repeat;
              background-position: center center;
              background-size: cover;
+             min-height: 100vh;
+             overflow-x: hidden;
 
         }
         .container{
@@ -752,6 +756,7 @@
     </script>
 </body>
 </html>
+
 
 
 
